# Adventure_game

./: .gitignore  CHANGELOG.md  Dockerfile  Valeria.json  adventure_game.py  docker-compose.yml  entrypoint.sh  game.py  item_and_ability_collection.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release_tag.yml  version-control.yml
app/: .env  basic_game.py  config.py
app/api/: __init__.py  requirements.txt  routes.py  wsgi.py
app/characters/: character.py  npc.py  player.py
app/characters/non_playable/: tree_trunk.py
app/characters/playable/: rogue.py
app/classes/: class_attributes.json  player.py
app/classes/Rouge/: rouge_abilities.py  rouge_class.py
app/combat/: abilities.py  combat.py
app/gameplay/: .env  basic_game.py  config.py  game_ui.py  movement.py
app/gameplay/combat/: combat_attr.py
app/gameplay/map/: map.py
app/interface/: menu.py  style.py
app/pygame/: .env  basic_game.py  character.py  config.py  map.py  menu.py  movement.py  sprites.py
app/saved_games/: Valeria.json
app/sprites/: base_sprite.py
app/utilities/: arg_parser.py  common_utils.py  constants.py  dataclasses.py  tiled.py
map/: Overworld.tsx  adventure_game_map.tiled-session  character.tsx  game_map.tmx
src/api/: __init__.py  api_requirements.txt  routes.py  wsgi.py
src/characters/: character.py  npc.py
src/gameplay/: .env  api_actions.py  basic_game.py  config.py  game_ui.py  menu.py  movement.py
src/sprites/: base_sprite.py
src/utilities/: api_actions.py  arg_parser.py  common_utils.py  database.py  dataclasses.py  tiled.py
(+29 files in other folders)
